# collision-detection

./: .gitignore  CMakeLists.txt  compile_commands.json  flake.nix
includes/: lib.hpp
includes/colliders/: greedyCollider.hpp
src/: lib.cpp  main.cpp
src/colliders/: greedyCollider.cpp
test/: boundingBox.cpp  boxUnino.cpp  bvhTree.cpp  collisionDetection.cpp
test/colliders/: bvhTree.cpp  greedyCollider.cpp
